# lifesrc-minimizer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  gol-sat.c
cmake/: Mergesat.cmake
lifesrc-3.8/: .gitignore
lifesrc-3.8+lcsmuller1/: interact.c
patterns/: 1.txt  2.txt  25.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  luders.txt  test.txt
src/: Makefile  commandline.c  commandline.cpp  commandline.h  field.c  field.cpp  field.h  formula.c  formula.cpp  formula.h  main.cpp  pattern.c  pattern.h  popen2.c  popen2.h
